--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donation Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to the Donation Website</h1>
-    <p>Please donate to support those in need.</p>
+    <header>
+        <h1>Welcome to the Donation Website</h1>
+        <p>Please donate to support those in need.</p>
+    </header>
+
+    <section>
+        <button id="donate-btn">Donate Now</button>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
