--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Donation Website</h1>
-        <p>Please donate to support those in need.</p>
+        <h1>Help Those in Need</h1>
+        <p>Every donation makes a difference. Contribute today.</p>
     </header>
+    
+    <section class="donate-section">
+        <a href="donate.html" class="donate-btn">Donate Now</a>
+        <a href="signup.html" class="signup-btn">Sign Up</a>
+        <a href="chat.html" class="chat-btn">Chat with Donors</a>
+    </section>
 
-    <section>
-        <button id="donate-btn">Donate Now</button>
+    <section class="images">
+        <img src="images/needy1.jpg" alt="Needy child">
+        <img src="images/needy2.jpg" alt="Needy family">
+        <img src="images/needy3.jpg" alt="Needy people">
     </section>
 
     <script src="script.js"></script>
