--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donation Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Help Those in Need</h1>
-        <p>Every donation makes a difference. Contribute today.</p>
+        <h1>Welcome to the Donation Website</h1>
+        <nav>
+            <a href="signup.html">Sign Up</a>
+            <a href="login.html">Login</a>
+        </nav>
     </header>
     
-    <section class="donate-section">
-        <a href="donate.html" class="donate-btn">Donate Now</a>
-        <a href="signup.html" class="signup-btn">Sign Up</a>
-        <a href="chat.html" class="chat-btn">Chat with Donors</a>
+    <section class="donation-section">
+        <h2>Donate Now</h2>
+        <p>Support those in need with a donation.</p>
+        <button onclick="window.location.href='donate.html'">Donate</button>
     </section>
 
-    <section class="images">
-        <img src="images/needy1.jpg" alt="Needy child">
-        <img src="images/needy2.jpg" alt="Needy family">
-        <img src="images/needy3.jpg" alt="Needy people">
-    </section>
-
-    <script src="script.js"></script>
+    <footer>
+        <p>© 2025 Donation Website</p>
+    </footer>
 </body>
 </html>
