--- a/signup.html
+++ b/signup.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Signup</title>
+    <script defer src="signup.js"></script>
 </head>
 <body>
     <h2>Sign Up</h2>
-    <form id="signupForm">
-        <input type="text" id="name" placeholder="Full Name" required><br>
-        <input type="email" id="email" placeholder="Email" required><br>
-        <input type="password" id="password" placeholder="Password" required><br>
+    <form id="signup-form">
+        <input type="email" id="email" placeholder="Enter email" required>
+        <input type="password" id="password" placeholder="Enter password" required>
         <button type="submit">Sign Up</button>
     </form>
-    <script>
-        document.getElementById('signupForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            alert('Verification email sent!');
-        });
-    </script>
+    <p id="message"></p>
 </body>
 </html>
