--- a/donate.html
+++ b/donate.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Choose a Donation Method</h2>
+    <h2>Donate to Help</h2>
+    <p>Choose your donation method:</p>
 
-    <button onclick="donatePayPal()">Donate via PayPal</button>
-    <button onclick="donateBitcoin()">Donate Bitcoin</button>
-    
-    <script>
-        function donatePayPal() {
-            window.location.href = "https://www.paypal.com/donate/?hosted_button_id=YOUR_BUTTON_ID";
-        }
-        function donateBitcoin() {
-            window.location.href = "bitcoin:YOUR_BITCOIN_ADDRESS";
-        }
-    </script>
+    <button onclick="window.location.href='https://www.paypal.com/donate'">Donate via PayPal</button>
+    <button onclick="window.location.href='https://www.bitcoin.com/'">Donate via Bitcoin</button>
 </body>
 </html>
