--- a/landing.html
+++ b/landing.html
@@ -11,9 +11,9 @@
         <h1>Welcome to Our Donation Platform</h1>
         <p>Join us in making a difference. Donate today!</p>
         <nav>
-            <a href="signup.html">Sign Up</a>
-            <a href="login.html">Login</a>
             <a href="donate.html">Donate</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
