--- a/index.html
+++ b/index.html
@@ -8,40 +8,45 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 50px;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
         .container {
-            max-width: 600px;
-            margin: auto;
+            max-width: 500px;
+            margin: 50px auto;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
-        button {
-            background-color: #28a745;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
+        h1 {
+            color: #333;
         }
-        button:hover {
-            background-color: #218838;
+        p {
+            color: #666;
+        }
+        .donate-btn {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+
     <div class="container">
-        <h1>Welcome to the Donation Website</h1>
-        <p>Support those in need with a donation.</p>
+        <h1>Support Our Cause</h1>
+        <p>Your donation helps us make a difference. Click below to donate securely via PayPal.</p>
 
-        <button onclick="donate()">Donate Now</button>
-
-        <p>&copy; 2025 Donation Website</p>
+        <!-- PayPal Donate Button -->
+        <div class="donate-btn">
+            <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="hosted_button_id" value="N78VSHXZH375J" />
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" 
+                title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_KE/i/scr/pixel.gif" width="1" height="1" />
+            </form>
+        </div>
     </div>
 
-    <script>
-        function donate() {
-            alert("Donation feature coming soon!");
-        }
-    </script>
 </body>
 </html>
