--- a/index.html
+++ b/index.html
@@ -4,49 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donation Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 500px;
-            margin: 50px auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-        .donate-btn {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <div class="container">
+    <header>
         <h1>Support Our Cause</h1>
         <p>Your donation helps us make a difference. Click below to donate securely via PayPal.</p>
+    </header>
 
-        <!-- PayPal Donate Button -->
-        <div class="donate-btn">
-            <form action="https://www.paypal.com/donate" method="post" target="_top">
-                <input type="hidden" name="hosted_button_id" value="N78VSHXZH375J" />
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" 
-                title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                <img alt="" border="0" src="https://www.paypal.com/en_KE/i/scr/pixel.gif" width="1" height="1" />
-            </form>
+    <section class="donate-section">
+        <form action="https://www.paypal.com/donate" method="post" target="_top">
+            <input type="hidden" name="hosted_button_id" value="N78VSHXZH375J" />
+            <button type="submit" class="donate-btn">Donate Now</button>
+        </form>
+    </section>
+
+    <section class="gallery">
+        <h2>See Who You're Helping</h2>
+        <div class="image-container">
+            <img src="images/children-hunger.jpg" alt="Children suffering from hunger">
+            <img src="images/woman-crying.jpg" alt="Woman crying for help">
         </div>
-    </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Donation Website. All Rights Reserved.</p>
+    </footer>
 
 </body>
 </html>
