--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <section class="gallery">
         <h2>See Who Needs Your Help</h2>
         <div class="gallery-container">
-            <img src="images/1.png" alt="Hungry Child">
-            <img src="images/crying_woman.jpg" alt="Crying Woman">
-            <img src="images/starving_children.jpg" alt="Starving Children">
+            <img src="images/10.jpg" alt="Hungry Child">
+            <img src="images/11.jpg" alt="Crying Woman">
+            <img src="images/9.jpg" alt="Starving Children">
         </div>
     </section>
 
