--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="gallery">
         <h2>See Who Needs Your Help</h2>
         <div class="gallery-container">
-            <img src="images/10.jpg" alt="Hungry Child">
+            <img src="images/10.jpg,4.jpg" alt="Hungry Child">
             <img src="images/11.jpg" alt="Crying Woman">
             <img src="images/9.jpg" alt="Starving Children">
         </div>
