--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
     </header>
 
     <section class="donate-section">
-        <h2>Make a Donation</h2>
-        <p>Click below to donate securely via PayPal.</p>
-
-        <form action="https://www.paypal.com/donate" method="post" target="_top">
-            <input type="hidden" name="hosted_button_id" value="N78VSHXZH375J" />
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" 
-                   border="0" name="submit" 
-                   title="Donate with PayPal" 
-                   alt="Donate with PayPal button">
-            <img alt="" border="0" src="https://www.paypal.com/en_KE/i/scr/pixel.gif" width="1" height="1" />
-        </form>
+        <div class="slideshow"></div> <!-- Sliding Background -->
+        <div class="donate-content">
+            <h2>Make a Donation</h2>
+            <p>Click below to donate securely via PayPal.</p>
+            <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="hosted_button_id" value="N78VSHXZH375J" />
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" 
+                       border="0" name="submit" 
+                       title="Donate with PayPal" 
+                       alt="Donate with PayPal button">
+                <img alt="" border="0" src="https://www.paypal.com/en_KE/i/scr/pixel.gif" width="1" height="1" />
+            </form>
+        </div>
     </section>
 
     <section class="gallery">
         <h2>See Who Needs Your Help</h2>
         <div class="gallery-container">
-            <img src="images/10.jpg,4.jpg" alt="Hungry Child">
+            <img src="images/10.jpg" alt="Hungry Child">
             <img src="images/11.jpg" alt="Crying Woman">
             <img src="images/9.jpg" alt="Starving Children">
         </div>
