--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     </header>
 
     <section class="donate-section">
+        <section class="btc-donate-section">
+    <h2>Donate with Bitcoin</h2>
+    <p>Scan the QR code below to send Bitcoin donations.</p>
+    <img src="images/btc-qr.png" alt="Bitcoin QR Code" class="btc-qr">
+    <p>Or send BTC manually to:</p>
+    <p class="btc-address">1YourBitcoinAddressHere</p>
+</section>
         <div class="slideshow"></div> <!-- Sliding Background -->
         <div class="donate-content">
             <h2>Make a Donation</h2>
