--- a/index.html
+++ b/index.html
@@ -1,129 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FEED THE FUTURE</title>
-    <style>
-        /* General Styles */
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            padding: 0;
-            color: #fff;
-            text-align: center;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FEED THE FUTURE</title>
+  <style>
+    /* General Styles */
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #fff;
+      text-align: center;
+      background-color: #000; /* Fallback background */
+    }
 
-        /* Background Image Slider */
-        .background-slider {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 200%;
-            height: 200vh;
-            background-size: cover;
-            background-position: center;
-            animation: slide 15s infinite alternate;
-        }
+    /* Background Image Slider */
+    .background-slider {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-size: cover;
+      background-position: center;
+      animation: slide 15s infinite alternate;
+      z-index: -1;
+      opacity: 0.7;
+    }
+    @keyframes slide {
+      0% { background-image: url('https://source.unsplash.com/1600x900/?hunger,africa'); }
+      33% { background-image: url('https://source.unsplash.com/1600x900/?poverty,children'); }
+      66% { background-image: url('https://source.unsplash.com/1600x900/?starving,hope'); }
+      100% { background-image: url('https://source.unsplash.com/1600x900/?hunger,africa'); }
+    }
 
-        @keyframes slide {
-            100% { background-image: url('https://source.unsplash.com/1600x900/?hunger,africa'); }
-            100% { background-image: url('https://source.unsplash.com/1600x900/?poverty,children'); }
-            100% { background-image: url('https://source.unsplash.com/1600x900/?starving,hope'); }
-        }
+    /* Content Box */
+    .content {
+      position: relative;
+      z-index: 1;
+      max-width: 1200px;
+      margin: 5vh auto;
+      padding: 2em;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
 
-        /* Content Box */
-        .content {
-            position: relative;
-            z-index: 1;
-            max-width: 1200px;
-            margin: 5vh auto;
-            padding: 2em;
-            background: rgba(0, 0, 0, 0.7);
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
+    h1, h2 {
+      margin-bottom: 10px;
+    }
 
-        h1, h2 {
-            margin-bottom: 10px;
-        }
+    p {
+      font-size: 1.2em;
+      margin-bottom: 20px;
+    }
 
-        p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
+    /* Donation Buttons */
+    .button {
+      display: block;
+      width: 80%;
+      margin: 10px auto;
+      padding: 12px;
+      background: #ff9800;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 1.2em;
+      transition: 0.3s;
+    }
+    .button:hover {
+      background: #d32f2f;
+    }
 
-        /* Donation Buttons */
-        .button {
-            display: block;
-            width: 80%;
-            margin: 10px auto;
-            padding: 12px;
-            background: #ff9800;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            transition: 0.3s;
-        }
+    /* Bitcoin Section */
+    .btc-donate {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .btc-qr {
+      width: 150px;
+      height: 150px;
+      margin: 10px auto;
+    }
+    .btc-address {
+      font-size: 1em;
+      background: #222;
+      padding: 10px;
+      border-radius: 5px;
+      display: inline-block;
+      word-break: break-word;
+    }
 
-        .button:hover {
-            background: #d32f2f;
-        }
-
-        /* Bitcoin Section */
-        .btc-donate {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .btc-qr {
-            width: 150px;
-            height: 150px;
-            margin: 10px auto;
-        }
-
-        .btc-address {
-            font-size: 1em;
-            background: #222;
-            padding: 10px;
-            border-radius: 5px;
-            display: inline-block;
-            word-break: break-word;
-        }
-
-        /* Footer */
-        footer {
-            margin-top: 20px;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.8);
-        }
-    </style>
+    /* Footer */
+    footer {
+      margin-top: 20px;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.8);
+    }
+  </style>
+  <!-- PayPal JS SDK for Credit/Debit Card Donation (Credit Card option will appear if available) -->
+  <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=USD"></script>
 </head>
 <body>
 
-    <div class="background-slider"></div>
+  <div class="background-slider"></div>
 
-    <div class="content">
-        <h1>Feed the Future</h1>
-        <h2>Help End Child Hunger in Africa</h2>
-        <p>Millions of children in Africa go to bed hungry every night. Your donation can help provide food and nutrition to those in need.</p>
+  <div class="content">
+    <h1>Feed the Future</h1>
+    <h2>Help End Child Hunger in Africa</h2>
+    <p>Millions of children in Africa go to bed hungry every night. Your donation can help provide food and nutrition to those in need.</p>
 
-        <!-- PayPal Donate Button -->
-        <a href="https://www.paypal.com/donate/?hosted_button_id=YOUR_BUTTON_ID" class="button">Donate with PayPal</a>
+    <!-- PayPal Donate Button (Hosted Button) -->
+    <a href="https://www.paypal.com/donate/?hosted_button_id=YOUR_BUTTON_ID" class="button">Donate with PayPal</a>
+    
+    <!-- PayPal Credit/Debit Card Donation Button via JS SDK -->
+    <div id="paypal-button-container" style="margin: 20px auto;"></div>
 
-        <!-- Bitcoin Donate Section -->
-        <div class="btc-donate">
-            <h2>Donate with Bitcoin</h2>
-            <p>Scan the QR code to send Bitcoin:</p>
-            <img src="C:\Users\user\Downloads\images/btc-qr.png" alt="Bitcoin QR Code" class="btc-qr">
-            <p class="btc-address">17FQMZT79jshicasLJzgx4m8GKNxDAsKiv</p>
-        </div>
+    <!-- Bitcoin Donate Section -->
+    <div class="btc-donate">
+      <h2>Donate with Bitcoin</h2>
+      <p>Scan the QR code to send Bitcoin:</p>
+      <img src="images/btc-qr.png" alt="Bitcoin QR Code" class="btc-qr">
+      <p class="btc-address">17FQMZT79jshicasLJzgx4m8GKNxDAsKiv</p>
     </div>
+  </div>
 
-    <footer>
-        <p>&copy; 2025 Feed the Future. All Rights Reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Feed the Future. All Rights Reserved.</p>
+  </footer>
+
+  <script>
+    // Render the PayPal button for Credit/Debit Card Donation
+    paypal.Buttons({
+      style: {
+        shape: 'rect',
+        color: 'gold',
+        layout: 'vertical',
+        label: 'donate'
+      },
+      createOrder: function(data, actions) {
+        // Set donation amount. Modify '10.00' if needed, or make it dynamic.
+        return actions.order.create({
+          purchase_units: [{
+            amount: {
+              value: '10.00'
+            }
+          }]
+        });
+      },
+      onApprove: function(data, actions) {
+        return actions.order.capture().then(function(details) {
+          alert('Thank you for your donation, ' + details.payer.name.given_name + '!');
+        });
+      }
+    }).render('#paypal-button-container');
+  </script>
 
 </body>
 </html>
